:sparkles: feat:reading CRUD
